# lsha

./: .gitignore  .gitmodules  README.md  README_PYSINDY.md  pyproject.toml  requirements.txt
it/polimi/hri_learn/: cleanup_traces.py  learn_model.py  refine_model.py
it/polimi/sha_learning/: autotwin_learn.py  learn_model.py
resources/config/: TEMPLATE_lsha_config.ini  config.ini  lsha_config.ini
resources/learned_ha/: H_hri_b1  H_hri_c3  H_hri_sim_b1
resources/learned_ha/thermostat_cs/: THERMO_UPPAAL_1  THERMO_UPPAAL_1.txt  THERMO_UPPAAL_10  THERMO_UPPAAL_10.txt  THERMO_UPPAAL_10_source.txt  THERMO_UPPAAL_1_source.txt  THERMO_UPPAAL_2  THERMO_UPPAAL_2.txt  THERMO_UPPAAL_2_source.txt  THERMO_UPPAAL_3.txt  THERMO_UPPAAL_3_source.txt  THERMO_UPPAAL_4.txt  THERMO_UPPAAL_4_source.txt  THERMO_UPPAAL_5.txt  THERMO_UPPAAL_5_source.txt  (+10 more)
resources/learned_sha/: ENERGY_MADE_1.txt  ENERGY_MADE_1_histogram_values.txt  HRI_SIM_3b_histogram_values.txt  THERMO_UPPAAL_1.txt  THERMO_UPPAAL_2.txt  THERMO_UPPAAL_3.txt  THERMO_UPPAAL_4.txt  THERMO_UPPAAL_5.txt  madeENERGY_MADE_1  madeENERGY_MADE_1_source.txt
resources/scripts/: verify.sh
resources/uppaal_resources/: hri-w_ref.xml  hri-w_ref2.q  hri-w_ref3.q  thermostat.q  thermostat.xml
sha_learning/: autotwin_learn.py  learn_model.py
sha_learning/domain/: lshafeatures.py  obstable.py  shafeatures.py  sigfeatures.py  sulfeatures.py
sha_learning/learning_setup/: fastddtw.py  learner.py  logger.py  teacher.py  trace_gen.py
sha_learning/pltr/: energy_made_pltr.py  energy_pltr.py  hri_pltr.py  lsha_report.py  sha_pltr.py
(+126 files in other folders)
